# kturtle

./: CMakeLists.txt  README
doc/: CMakeLists.txt
icons/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/interpreter/: echoer.h  executer.cpp  interpreter.cpp  parser.cpp  translator.cpp
